--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "make-all-good",
-  "homepage": "https://debi7.github.io/App-Make-All-Good/",
+  "homepage": "https://debi7.github.io/Make-All-Good/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
