--- a/package.json
+++ b/package.json
@@ -13,19 +13,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "node-modules": "^1.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "node-modules": "^1.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^8.44.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
     "gh-pages": "^6.1.1",
     "vite": "^4.4.0"
   }
